<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_title_colour"
        android:paddingBottom="@dimen/small_padding"
        android:paddingLeft="@dimen/small_padding"
        android:paddingTop="@dimen/small_padding"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/app_title" />

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="@dimen/small_padding"
        android:background="@color/sub_title_colour">
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_score"
            android:paddingLeft="@dimen/small_padding"
            android:paddingRight="@dimen/small_padding"
            android:textColor="@color/white"
            android:textSize="@dimen/sub_title"/>
        
        <TextView 
            android:id="@+id/total_score_header_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="@dimen/sub_title"/>
        
    </LinearLayout>
    
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:clickable="false"
        android:focusable="false"
        android:paddingLeft="8dp"
    	android:paddingRight="8dp"
        android:focusableInTouchMode="false"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/challenge"
       		android:textStyle="bold" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textSize="20sp"
            android:text="@string/score"
            android:textStyle="bold" />
        
    </RelativeLayout>
    
    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000"/>

</LinearLayout>