<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_title_colour"
        android:paddingBottom="@dimen/small_padding"
        android:paddingLeft="@dimen/small_padding"
        android:paddingTop="@dimen/small_padding"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/app_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sub_title_colour"
        android:paddingLeft="@dimen/small_padding"
        android:text="@string/config"
        android:textColor="@color/white"
        android:textSize="@dimen/sub_title" />

   
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_my_uni_adddress"
            android:textSize="@dimen/sub_title"
            android:layout_margin="@dimen/small_padding"  />

        <EditText
            android:id="@+id/config_edit_text_my_uni_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textUri"
            android:text="255.255.255.255"
            android:maxLength="15"
            android:layout_margin="@dimen/small_padding"  />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/app_title_colour"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_marginBottom="@dimen/small_padding" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_adv_uni_address"
            android:textSize="@dimen/sub_title"
            android:layout_margin="@dimen/small_padding"  />

        <EditText
            android:id="@+id/config_edit_text_adv_uni_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:text="255.255.255.255"
            android:maxLength="15"
            android:inputType="textUri"
            android:layout_margin="@dimen/small_padding"  />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/app_title_colour"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_marginBottom="@dimen/small_padding" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/config_team_id"
            android:textSize="@dimen/sub_title"
            android:layout_margin="@dimen/small_padding"  />

        <EditText
            android:id="@+id/config_edit_text_team_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0000"
            android:imeOptions="actionDone"
            android:inputType="number"
            android:layout_margin="@dimen/small_padding"  />
        
        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/app_title_colour"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_marginBottom="@dimen/small_padding" />
    

</LinearLayout>