<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/main_button_color">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small_padding"
            android:text="@string/question"
            android:textColor="@color/white" />
        
        <TextView 
            android:id="@+id/question_result_score_text_view"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:layout_alignParentRight="true"
            android:padding="@dimen/small_padding"/>
        
        <TextView 
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:text="@string/score"
            android:layout_toLeftOf="@id/question_result_score_text_view"
            android:padding="@dimen/small_padding"/>
        
    </RelativeLayout>

    <TextView
        android:id="@+id/question_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_button_color"
        android:padding="@dimen/small_padding"
        android:text="@string/solution"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/question_solution_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/small_padding"
        android:textColor="#CC0000" />

</LinearLayout>